--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "sidePanel"],
+  "permissions": ["storage", "sidePanel", "tabs", "scripting"],
+  "host_permissions": ["<all_urls>"],
   "side_panel": {
     "default_path": "index.html",
     "default_icon": "images/icon.png",
